Create function to fetch the data with new city

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="js/script.js
         "></script>
     </head>
-    <body>
+    <body> 
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -16,7 +16,7 @@
                         <form>
                             <div class="form-group">
                               <label for="exampleFormControlInput1">City</label>
-                              <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Search for the city">
+                              <input type="text" class="form-control" id="name" placeholder="Search for the city">
                               <button type="submit" class="btn btn-primary searchBtn">Search</button>
                             </div>
                           </form>
