--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Page Title</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/test.css">
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="js/script.js
-        "></script>
-    </head>
-    <body> 
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="stage">
-                        <form>
-                            <div class="form-group">
-                              <label for="exampleFormControlInput1">City</label>
-                              <input type="text" class="form-control" id="name" placeholder="Search for the city">
-                              <button type="submit" class="btn btn-primary searchBtn">Search</button>
-                            </div>
-                          </form>
-                    </div>
-                </div>
-            </
-        </div>
-    </body>
+   <head>
+      <title>Page Title</title>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+      <link rel="stylesheet" href="css/test.css">
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+      <script src="js/script.js
+         "></script>
+   </head>
+   <body>
+      <div class="container">
+      <div class="row">
+         <div class="col-md-12">
+            <div class="stage">
+               <div class="container-fluid noPadding">
+                  <div class="row">
+                     <div class="col-md-12">
+                        <div class="header-stage nightStorm">asdfasdf</div>
+                     </div>
+                  </div>
+               </div>
+               <!-- <form>
+                  <div class="form-group">
+                    <label for="exampleFormControlInput1">City</label>
+                    <input type="text" class="form-control" id="name" placeholder="Search for the city">
+                    <button type="submit" class="btn btn-primary searchBtn">Search</button>
+                  </div>
+                  </form> -->
+            </div>
+         </div>
+      </div>
+   </body>
 </html>
