Fetch data same function and pass city as paramentes

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
                      </div>
                   </div>
                </div>
-               <!-- <form>
+               <form>
                   <div class="form-group">
                     <label for="exampleFormControlInput1">City</label>
                     <input type="text" class="form-control" id="name" placeholder="Search for the city">
                     <button type="submit" class="btn btn-primary searchBtn">Search</button>
                   </div>
-                  </form> -->
+                  </form>
+                  <div class="showName" id="showName"></div>
             </div>
          </div>
       </div>
